# decaf-emu

./: .travis.yml  CMakeLists.txt  conanfile.py
resources/: CMakeLists.txt
resources/shaders/: CMakeLists.txt  gpu7_tiling.comp
src/libdecaf/: CMakeLists.txt
src/libdecaf/src/: decaf.cpp  decaf_log.cpp
src/libdecaf/src/cafe/: cafe_ppc_interface.h  cafe_ppc_interface_invoke.h  cafe_ppc_interface_invoke_trace.h  cafe_stackobject.h  cafe_tinyheap.cpp
src/libdecaf/src/cafe/kernel/: cafe_kernel.cpp  cafe_kernel.h  cafe_kernel_context.cpp  cafe_kernel_context.h  cafe_kernel_exception.cpp  cafe_kernel_exception.h  cafe_kernel_exception2.cpp  cafe_kernel_exception2.h  cafe_kernel_heap.cpp  cafe_kernel_heap.h  cafe_kernel_interrupt.cpp  cafe_kernel_interrupt.h  cafe_kernel_ios.cpp  cafe_kernel_ios.h  cafe_kernel_ipc.cpp  cafe_kernel_ipc.h  cafe_kernel_ipckdriver.cpp  cafe_kernel_ipckdriver.h  cafe_kernel_loader.cpp  cafe_kernel_loader.h  cafe_kernel_lock.h  cafe_kernel_mcp.cpp  cafe_kernel_mcp.h  cafe_kernel_mmu.cpp  cafe_kernel_mmu.h  cafe_kernel_process.cpp  cafe_kernel_process.h
src/libdecaf/src/cafe/libraries/: cafe_hle.cpp  cafe_hle.h  cafe_hle_library.cpp  cafe_hle_library.h  cafe_hle_library_function.h  cafe_hle_library_symbol.h  cafe_library.h  cafe_library_export.h  nn_result.h
src/libdecaf/src/cafe/libraries/coreinit/: coreinit.cpp  coreinit.h  coreinit_alarm.cpp  coreinit_alarm.h  coreinit_appio.cpp  coreinit_appio.h  coreinit_atomic.cpp  coreinit_atomic64.cpp  coreinit_bsp.cpp  coreinit_bsp.h  coreinit_cache.cpp  (+82 more)
src/libdecaf/src/cafe/loader/: cafe_loader.cpp  cafe_loader.h  cafe_loader_bounce.cpp  cafe_loader_bounce.h  cafe_loader_entry.cpp  cafe_loader_entry.h  cafe_loader_error.h  cafe_loader_globals.h  cafe_loader_iop.cpp  cafe_loader_iop.h  cafe_loader_ipcldriver.cpp  cafe_loader_ipcldriver.h  cafe_loader_library.cpp  cafe_loader_load_basics.cpp  cafe_loader_load_basics.h  cafe_loader_load_init.cpp  cafe_loader_load_init.h  cafe_loader_load_prep.cpp  cafe_loader_load_prep.h  cafe_loader_load_setup.cpp  cafe_loader_load_setup.h  cafe_loader_load_shared.cpp  cafe_loader_load_shared.h  cafe_loader_loaded_rpl.h  cafe_loader_minfileinfo.cpp  cafe_loader_minfileinfo.h  cafe_loader_process.cpp  cafe_loader_process.h  cafe_loader_reloc.cpp  cafe_loader_reloc.h  cafe_loader_rpl.h  cafe_loader_utils.h  cafe_loader_zlib.h
src/libdecaf/src/debug_api/: debug_api_cafe.cpp
src/libdecaf/src/debugger/: debugger_controller.cpp  debugger_ui_statsview.cpp
src/libdecaf/src/ios/: ios_enum.h  ios_heap.cpp  ios_nn_ipc_server.h  ios_process.cpp  ios_process.h  ios_result.h  ios_scheduler.cpp  ios_scheduler.h  ios_semaphore.h  ios_syscalls.h  ios_thread.h
src/libdecaf/src/ios/acp/: ios_acp.cpp  ios_acp_main_metaserver.cpp  ios_acp_main_metaserver.h  ios_acp_nn_miscservice.cpp  ios_acp_nn_miscservice.h  ios_acp_nn_saveservice.cpp  ios_acp_nn_saveservice.h  ios_acp_nnsm.cpp  ios_acp_nnsm_ipc.cpp  ios_acp_nnsm_ipc.h
src/libdecaf/src/ios/fpd/: ios_fpd_act_serverstandardservice.cpp
src/libdecaf/src/ios/fs/: ios_fs.cpp  ios_fs_fsa_device.cpp
src/libdecaf/src/ios/mcp/: ios_mcp_enum.h
src/libdecaf/src/ios/nn/: ios_nn.cpp  ios_nn.h  ios_nn_criticalsection.cpp  ios_nn_criticalsection.h  ios_nn_metaserver.cpp  ios_nn_metaserver.h  ios_nn_recursivemutex.cpp  ios_nn_recursivemutex.h  ios_nn_thread.cpp  ios_nn_thread.h  ios_nn_tls.cpp  ios_nn_tls.h
src/libdecaf/src/kernel/: kernel.cpp  kernel_gameinfo.cpp  kernel_loader.cpp  kernel_memory.cpp  kernel_memory.h
src/libdecaf/src/modules/coreinit/: coreinit_fastmutex.cpp  coreinit_fs.h  coreinit_fs_cmdblock.cpp  coreinit_fs_file2.cpp
src/libdecaf/src/nn/acp/: nn_acp_miscservice.h
src/libdecaf/src/nn/ipc/: nn_ipc_client.h  nn_ipc_command.h  nn_ipc_format.h  nn_ipc_managedbuffer.h  nn_ipc_transferablebufferallocator.cpp  nn_ipc_transferablebufferallocator.h
src/libdecaf/src/vfs/: vfs_directoryiterator.h  vfs_host_directoryiterator.cpp  vfs_overlay_device.cpp
tools/gsh-to-spirv/: CMakeLists.txt  main.cpp
tools/wiiu-rpc/: CMakeLists.txt
tools/wiiu-rpc/src/: console.cpp  main.cpp  packet.cpp  packet.h  server.cpp
(+100 files in other folders)
